--- a/public/styles.css
+++ b/public/styles.css
@@ -122,6 +122,8 @@ li {
     cursor: pointer;
     transition: background-color 0.3s ease, opacity 1s ease; 
     margin-bottom: 20px;
+    float: left; 
+    margin-right: 10px; 
 }
 
 .copyButton:hover {
